# bladvak

./: Cargo.toml  README.md
.github/workflows/: rust.yml  typos.yml
assets/: index.html
bladvak-cli/: Cargo.toml  README.md
bladvak-cli/assets/: downloader.sh  gen_assets.sh  manifest.json  sw.js
bladvak-cli/src/: lib.rs  main.rs
examples/: example_app.rs
src/: app.rs  errors.rs  file_handler.rs  lib.rs  main.rs  settings.rs  utils.rs
src/utils/: clipboard.rs  document.rs  grid.rs  mod.rs
