[package]
name = "bladvak"
version = "1.1.9"
edition = "2024"
description = "Base egui/eframe app - bladvak means 'pickaxe' in Gobbledegook"
license = "MIT"
repository = "https://github.com/Its-Just-Nans/bladvak"
homepage = "https://github.com/Its-Just-Nans/bladvak"
documentation = "https://docs.rs/bladvak"
categories = ["graphics", "gui"]
keywords = ["egui", "eframe", "bladvak"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",
    "serde",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.33", features = [
    "all_loaders",
    "serde",
    "syntect",
] }
rfd = "0.16.0"
poll-promise = { version = "0.3", features = ["web"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.83", features = [
    "Url",
] } # to access the DOM (to hide the loading text)
js-sys = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
