[package]
name = "bladvak-cli"
version = "0.1.0"
edition = "2024"
description = "Base egui/eframe app - bladvak means 'pickaxe' in Gobbledegook"
license = "MIT"
repository = "https://github.com/Its-Just-Nans/bladvak"
homepage = "https://github.com/Its-Just-Nans/bladvak"
documentation = "https://docs.rs/bladvak"
categories = ["graphics", "gui"]
keywords = ["egui", "eframe", "bladvak"]

[dependencies]
